Clean up streaming code
Signed-off-by: Sven Strittmatter <sven.strittmatter@iteratec.com>